# advent-of-code

./: .gitignore  pyproject.toml
src/advent_of_code/: __init__.py
src/advent_of_code/year_2024/: day_01.py  day_02.py  day_03.py
tests/year_2024/: test_day_01.py  test_day_02.py  test_day_03.py
