[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Paul Harrison <paul@harrison.sh>"]
readme = "README.md"
packages = [{include = "advent_of_code", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
